@@ -1,5 +1,6 @@
 main
 ====
+Fix: methods `drop_[collection|table]` of `[Async]Database`, and their Collection/Table sugar methods, now consistently return None.
 AstraDBAdmin: introduced `[async_]find_available_regions()` method (and related response objects)
 embedding/reranking models' "API support status":
     - db admins' `.find_[embedding|reranking]_providers()` methods have a `filter_model_status` parameter;
